--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,10 +1,9 @@
 {% extends 'blog/base.html' %}
+{% load static %}
 {% block content %}
 
-
-<h1>Resetowanie hasła zakończone</h1>
-<p>Twoje nowe hasło zostało ustawione. Możesz się teraz zalogować <a href="{% url 'login' %}"></a>.</p>
-
-
+<h1 class="h3 mb-3 font-weight-normal" style="color: white; text-align: center;">Resetowanie hasła zakończone</h1>
+<p style="color: white; text-align: center;">Twoje nowe hasło zostało ustawione. Możesz się teraz zalogować</p>
+<a href="{% url 'login' %}"></a>
 
 {% endblock %}
