--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,18 +1,60 @@
-{% extends "blog/base.html" %}
-
+{% extends 'blog/base.html' %}
+{% load static %}
 {% block content %}
+
+<style type="text/css">
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+.form-signin .checkbox {
+  font-weight: 400;
+}
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: 10px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="text"] {
+  margin-bottom: 10px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 5px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+.h3 {
+    text-align: center;
+}
+
+</style>
 
 {% if validlink %}
 
-<h1>Ustaw nowe hasło</h1>
-<div class="form-group">
-<form method="POST">
+
+<form class="form-signin" method="POST">
   {% csrf_token %}
-  {{ form.as_p }}
-  <!-- <input class="btn btn-primary" value="Zmień hasło"> -->
-  <button type="submit" class="btn btn-primary">Zmień hasło</button>
+  <h1 class="h3 mb-3 font-weight-normal" style="color: white;">Ustaw nowe hasło</h1><hr>
+  <input type="password" name="new_password1" class="form-control" autocomplete="new-password" id="id_new_password1" placeholder="Wprowadż nowe hasło" aria-autocomplete="list" required>
+  <input type="password" name="new_password2" class="form-control" autocomplete="new-password" id="id_new_password2" placeholder="Wprowadż jeszcze raz" required>
+
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Zmień hasło</button>
 </form>
-</div>
+
 {% else %}
 
 <p>Link do resetowania hasła był nieprawidłowy, prawdopodobnie dlatego, że został już użyty. Proszę ponownie poprosić o zresetowanie hasła.</p>
