--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,5 +1,7 @@
 {% extends 'blog/base.html' %}
+{% load static %}
 {% block content %}
-  <h1>Sprawdź swój email.</h1>
-  <p>Wysłaliśmy Ci e-mailem instrukcje dotyczące ustawiania hasła. Powinieneś wkrótce otrzymać e-mail!</p>
+  
+<h1 class="h3 mb-3 font-weight-normal" style="color: white; text-align: center;">Sprawdź swój email.</h1>
+<p style="color: white; text-align: center;">Wysłaliśmy Ci e-mailem instrukcje dotyczące ustawiania hasła. Powinieneś wkrótce otrzymać e-mail!</p>
 {% endblock %}
