--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=default">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}" />
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js"></script>
     <!-- Moment.js -->
@@ -24,7 +25,7 @@
   </head>
   <body>
     
-  <div class="page">
+  <div class="page" style="background: linear-gradient(to top, rgb(5, 0, 23), rgb(13,110,253))">
     {% include 'blog/navbar.html' %}
     
     <div class="container">
