--- a/templates/blog/footer.html
+++ b/templates/blog/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<footer class="footer text-center text-lg-start text-light" style="background-color:#0955c6; width: 100%; margin-top: auto;">
+<footer class="footer text-center text-lg-start text-light" style="background: linear-gradient(to bottom, rgb(6,13,51), rgb(5,0,23)); width: 100%; margin-top: auto;">
 <div class="container">
     <div class="d-flex justify-content-between">
     <!-- Section: Links  -->
