--- a/templates/blog/pagination.html
+++ b/templates/blog/pagination.html
@@ -4,12 +4,12 @@
     {% if posts.has_previous %}
     <a href="?page={{posts.previous_page_number}}" class="btn btn-white"><i class="ti-arrow-left fs-9 mr-4"></i>Poprzednia</a>
     {% else %}
-    <a href="#" class="btn btn-white disabled"><i class="ti-arrow-left fs-9 mr-4"></i>Poprzednia</a>
+    <a href="#" class="btn btn-white disabled" style="color: white;"><i class="ti-arrow-left fs-9 mr-4"></i>Poprzednia</a>
     {% endif %}
 
     {% if posts.has_next %}
     <a href="?page={{posts.next_page_number}}" class="btn btn-white"><i class="ti-arrow-right fs-9 mr-4"></i>Nastepna</a>
     {% else %}
-    <a href="#" class="btn btn-white disabled"><i class="ti-arrow-right fs-9 mr-4"></i>Nastepna</a>
+    <a href="#" class="btn btn-white disabled"  style="color: white;"><i class="ti-arrow-right fs-9 mr-4"></i>Nastepna</a>
     {% endif %}
 </nav>
