--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,57 @@
 {% extends 'blog/base.html' %}
-
+{% load static %}
 {% block content %}
-<div class="conteiner">
-	<h1>Login</h1>
-  <hr>
-  <br>
+<style type="text/css">
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+.form-signin .checkbox {
+  font-weight: 400;
+}
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="text"] {
+  margin-bottom: 10px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 5px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+.h3 {
+    text-align: center;
+}
+
+</style>
+
+<form class="form-signin" method=POST>
+  {% csrf_token %}
+  <h1 class="h3 mb-3 font-weight-normal" style="color: white;">Zaloguj się</h1><hr>
+  <input type="text" class="form-control" name="username" placeholder="Username" required autofocus>
+  <input type="password" class="form-control" name="password" placeholder="Hasło" required>
+  <a href="{% url 'password_reset' %}" style="color: white;">Nie pamiętasz hasła?</a><br><br>
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Zaloguj się</button>
+</form>
+
+  <!-- <br>
 		<form action="" method=POST>
 			{% csrf_token %}
 		
@@ -18,8 +65,7 @@
 
 			<input type="submit" value="Zaloguj się" class="btn btn-primary" style="width: 20%;">
 
-		</form>
+		</form> -->
 		
-</div>
-<br/><br/>	
+	
 {% endblock %}
