--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,17 +1,55 @@
-{% extends 'blog/base.html'%}
-
+{% extends 'blog/base.html' %}
+{% load static %}
 {% block content %}
+<style type="text/css">
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+.form-signin .checkbox {
+  font-weight: 400;
+}
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="text"] {
+  margin-bottom: 10px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 5px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+.h3 {
+    text-align: center;
+}
+</style>
 
-    <h1>Resetowanie hasła</h1>
-    <hr>
-    <form class="form-inline" method="POST">
-    <div class="form-group">   
-        {% csrf_token %}
-        {{ form }}
+<form class="form-signin" method=POST>
+    <h1 class="h3 mb-3 font-weight-normal" style="color: white;">Resetowanie hasła</h1><hr>
 
-        <button class="btn btn-primary">Resetuj</button>
-    </div>    
-    
-    </form>    
+  {% csrf_token %}
+  
+  <!-- {{ form }} -->
+  <input type="email" class="form-control" id="email" name="email" placeholder="E-mail" required>
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Resetuj</button>
+</form>
+
 
 {% endblock %}
