--- a/templates/events/admin_panel.html
+++ b/templates/events/admin_panel.html
@@ -5,7 +5,7 @@
 
 <h1>Panel Administratora</h1>
 <br/><br/><br/>
-<br action="" method=POST>
+<form action="" method=POST>
 	{% csrf_token %}
 
 <div class="card">
