--- a/templates/events/all_events.html
+++ b/templates/events/all_events.html
@@ -29,6 +29,44 @@
     
     {% for event in events %}
         {% if event.event_status %}
+        
+        <article class="post">
+            <header>
+                <div class="title">
+                    <h2><a href="{% url 'show_event' event.id %}">{{event}}</a></h2>
+                    <p>
+                        {% autoescape on %}
+                        {{ event.venue.details|safe|truncatewords:20}}
+                        {% endautoescape %}
+                    </p>
+                </div>
+                <div class="meta">
+                    
+                    <a href="" class="published"><span class="name">{{ event.venue }}</span></a>
+                    <time class="published" datetime="2015-11-01">{{ event.event_date }}</time>
+                    {% if user.profile %}
+                    <a href="{% url 'show_profile' post.author.profile.id %}" class="author"><span class="name">{{ event.manager }}</span><img src="#" alt=""/></a>               
+                    {% else %}
+                    <a href="" class="author"><span class="name">{{ event.manager }}</span><img src="#" alt=""/></a>
+                    {% endif %}
+                </div>
+            </header>
+            {% if event.venue.image %}
+            <a href="#" class="image featured"><img src="{{event.venue.image.url}}" alt="" /></a>
+            {% endif %}
+            <p>{{ event.short_description|safe|linebreaks|truncatewords:50}}</p>
+            <footer>
+                <ul class="actions">
+                    <li><a href="{% url 'show_event' event.id %}" class="button big">Czytać dalej</a></li>
+                </ul>
+            </footer>
+        </article>
+            <br>
+        
+        
+        
+        
+<!--         
         <div class="container">
         <div class="d-flex flex-row">
             <div class="d-inline-flex flex-column" style="width:100%">
@@ -96,7 +134,7 @@
             </div>
         </div>
         </div>
-        <br>
+        <br> -->
     
         {% endif %}
     {% endfor %}
