--- a/templates/events/all_events.html
+++ b/templates/events/all_events.html
@@ -44,7 +44,7 @@
                     
                     <a href="" class="published"><span class="name">{{ event.venue }}</span></a>
                     <time class="published" datetime="2015-11-01">{{ event.event_date }}</time>
-                    {% if user.profile %}
+                    {% if post.author.profile %}
                     <a href="{% url 'show_profile' post.author.profile.id %}" class="author"><span class="name">{{ event.manager }}</span><img src="#" alt=""/></a>               
                     {% else %}
                     <a href="" class="author"><span class="name">{{ event.manager }}</span><img src="#" alt=""/></a>
