--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -52,7 +52,7 @@
     <input type="text" class="form-control"  id="last_name" name="last_name" placeholder="Nazwisko" required>
     <input type="password" class="form-control" id="password1" name="password1" placeholder="Hasło" required>
     <input type="password" class="form-control" id="password2" name="password2" placeholder="Wprowadź ponownie hasło" required><br>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Zarejestruj się</button>
+    <button class="btn btn-lg btn-primary btn-block" style="width: 100%" type="submit">Zarejestruj się</button>
   </form>
 
 <br>    
