--- a/templates/events/show_event.html
+++ b/templates/events/show_event.html
@@ -9,8 +9,8 @@
     </div>
     <img src="{{event.venue.image.url}}" class="card-img-top" alt="Wild Landscape"/>
     <div class="card-body">
-      <h5 class="card-title"><b>{{ event.venue }}</b></h5>
-      <p class="card-text"><b>Szczegóły: </b>{{ event.description|safe }}</p>
+      <h5 class="card-title" style="color: black"><b>{{ event.venue }}</b></h5>
+      <p class="card-text" style="color: black;"><b>Szczegóły: </b>{{ event.description|safe }}</p>
       <hr>
       
         <li class="list-group-item px-3"><b>Data rospoczęcia: </b>{{ event.event_date }}<br></li>
@@ -65,6 +65,7 @@
             {% csrf_token %}
             {{ form }}
             <button class="btn btn-primary btn-block " type="submit">Chce dolączyc</button>
+            <a href="{% url 'event_chat_window' event.id %}" class="btn btn-primary btn-block">Czat</a>
         </form>
     </div>
         {% else %}
@@ -73,59 +74,6 @@
         </div>
     {% endif %}
     
-  
-  <!-- <h2>Wiadomości({{event.messages.count}})</h2>
-  {% for message in event.messages.all %}
-  <article class="media">
-      
-    <div class="card">
-      <div class="card-header">
-          <img class="mr-3" style="height: 40px; width: 40px;" src="https://cdn.iconscout.com/icon/free/png-256/avatar-375-456327.png" alt="Generic placeholder image">
-          
-          <a href="{% url 'show_profile' chat.user.profile.id %}">{{chat.user.first_name}} {{chat.user.last_name}}</a>
-          <i class="fa fa-heart"></i>
-          
-          <p class="small text-muted">
-            <a href="{% url 'show_profile' chat.user.profile.id %}">Profil użytkownika</a>
-          </p>
-      </div>
-      <div class="card-body">
-        <blockquote class="blockquote mb-0">
-          <p>{{chat.message}}</p>
-          
-          <footer class="blockquote-footer"><cite title="Source Title">{{chat.date}}</cite></footer>
-        </blockquote>
-      </div>
-    </div> 
-    <br>
-  </article>    
-  {% empty %}
-  <div class="notification">
-      <p>Brak Wiadomości</p>
-  </div>
-  {% endfor %}
-  
-  {% if user.is_authenticated %}
-    {% if user.profile.id %}
-    <div class="form-group">
-      <form method="POST" action="">
-        {% csrf_token %}
-          {{form}}
-         
-        <br>
-        <button class="btn btn-primary btn-block " type="submit">Dodaj</button> 
-      </form>
-    </div>
-    <br>
-    {% else %}
-    <div class="alert alert-info" role="alert">
-      Musisz <a href="{% url 'create_profile' %}" class="alert-link">stworzyć profil</a> publiczny, aby dodać komentarz!
-    </div>
-    {% endif %}    
-  {% else %}
-    <div class="alert alert-info" role="alert">
-        Musisz być zalogowany. <a href="{% url 'signin' %}" class="alert-link">Zaloguj się</a>, aby dodać komentarz!
-    </div>
-  {% endif %} -->
+
   
 {% endblock %}
