--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -48,7 +48,7 @@
   <input type="text" class="form-control" name="username" placeholder="Username" required autofocus>
   <input type="password" class="form-control" name="password" placeholder="Hasło" required>
   <a href="{% url 'password_reset' %}" style="color: white;">Nie pamiętasz hasła?</a><br><br>
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Zaloguj się</button>
+  <button class="btn btn-lg btn-primary btn-block"style="width: 100%" type="submit">Zaloguj się</button>
 </form>
 
   <!-- <br>
